[package]
name = "simpledb"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
byteorder = "1.4.3"
thiserror = "1.0"
tempfile = "3.3.0"
rand = "0.9.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }